manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mavenexercise-ingress
spec:
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mavenexercise-service
            port:
              number: 5555
  ingressClassName: nginx
